--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,28 @@ html {
 }
 
 .container {
-  width: 720px;
+  margin-top: 70px;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
+  height: 340px;
+  padding: 32px;
+  margin: 32px auto;
+  background-color: #efefef;
+  border-radius: 8px;
+}
+
+a {
+  display: inline-block;
+  margin-top: 30px;
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
+  padding: 15px;
+  border: 2px solid black;
+  border-radius: 8px
+}
+
+a:hover {
+  background-color: hsl(0, 0%, 71%);
 }
