--- a/src/components/Stage/style.css
+++ b/src/components/Stage/style.css
@@ -1,5 +1,8 @@
 .stage {
-  height: 340px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80%;
   padding: 32px;
   margin: 32px auto;
   background-color: #efefef;
