--- a/src/components/Wordbox/style.css
+++ b/src/components/Wordbox/style.css
@@ -1,13 +1,13 @@
 .wordbox {
   display: inline-block;
   position: relative;
-  padding: 16px;
+  padding: 15px;
   margin: 4px;
-  background-color: #8fb935;
+  background-color: #40b9ff;
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 16px;
   border-radius: 8px;
   z-index: 1;
@@ -19,11 +19,13 @@
 }
 
 .notActive {
-  background-color: #8fb9358a;
+  background-color: #40b9ff91;
   color: rgba(255, 255, 255, 0.7);
 }
 
 .active {
-  border: 3px solid green;
-  font-size: 25px
+  border: 3px solid #0075b8;
+  font-size: 40px;
+  padding: 25px;
+  color: rgb(57, 57, 57)
 }
