--- a/src/style.css
+++ b/src/style.css
@@ -4,33 +4,42 @@
   box-sizing: border-box;
 }
 
-html {
+html, body {
   font-family: 'Open Sans', sans-serif;
 }
 
 .container {
-  margin-top: 70px;
-  margin-right: auto;
-  margin-left: auto;
   text-align: center;
-  height: 340px;
+  align-items: center;
   padding: 32px;
-  margin: 32px auto;
-  background-color: #efefef;
+  padding-bottom: 15px;
+  background-image: url("background.jpg");
+  background-size: cover;
   border-radius: 8px;
+  height: 100%;
 }
 
 a {
   display: inline-block;
-  margin-top: 30px;
-  font-size: 25px;
-  color: black;
+  margin: 10px;
+  font-size: 20px;
+  color: rgb(57, 57, 57);
   text-decoration: none;
-  padding: 15px;
-  border: 2px solid black;
+  padding: 10px;
+  border: 3px solid rgb(246, 172, 224);
   border-radius: 8px
 }
 
 a:hover {
-  background-color: hsl(0, 0%, 71%);
+  background-color: hsl(0, 0%, 80%);
+}
+
+main {
+  max-width: 70%;
+}
+
+.footer {
+  margin: 0 auto;
+  color: rgba(57, 57, 57, 0.554);
+  font-size: 13px
 }
