--- a/src/components/FrontPage/style.css
+++ b/src/components/FrontPage/style.css
@@ -1,10 +1,32 @@
+.front_page {
+   display: flex; 
+   flex-direction: column;
+}
+
+.flex {
+    display: flex;
+}
+
+.title h1 {
+    flex-basis: 100%;
+    padding: 0px 0 20px 0;
+}
+
 .front_page_links {
     display: flex;
     flex-direction: column;
+    margin: 10px;
+    justify-content: space-around;
+}
+
+.front_page_links a {
+    padding: 25px;
+    font-size: 25px;
 }
 
 img {
-    max-width: 60%;
+    max-width: 55%;
     border-radius: 8px;
-    margin: 30px 0 15px 0;
+    margin: 20px;
+    
 }
