--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,11 @@
 
 html, body {
   font-family: 'Open Sans', sans-serif;
+  height: 100%;
+}
+
+#app {
+  height: 100%;
 }
 
 .container {
@@ -16,7 +21,18 @@ html, body {
   background-image: url("background.jpg");
   background-size: cover;
   border-radius: 8px;
-  height: 100%;
+  min-height: 100%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  margin-bottom: 0;
+  flex-shrink: 0;
+}
+
+main {
+  width: 80%;
 }
 
 a {
@@ -34,12 +50,10 @@ a:hover {
   background-color: hsl(0, 0%, 80%);
 }
 
-main {
-  max-width: 70%;
-}
-
 .footer {
-  margin: 0 auto;
   color: rgba(57, 57, 57, 0.554);
-  font-size: 13px
+  font-size: 13px;
+  background-color: #efefef85;
+  border-radius: 8px;
+  padding: 10px;
 }
